[package]
name = "stream-cancel"
version = "0.5.0-alpha.4"
edition = "2018"

description = "A library for interrupting asynchronous streams."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

homepage = "https://github.com/jonhoo/stream-cancel"
repository = "https://github.com/jonhoo/stream-cancel.git"

keywords = ["asynchronous", "futures"]
categories = ["network-programming", "asynchronous"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/stream-cancel" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures-core-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
pin-project = "0.4.0"
tokio-sync = "=0.2.0-alpha.6"

[dev-dependencies]
tokio = "=0.2.0-alpha.6"
