[package]
name = "stream-cancel"
version = "0.5.2"
edition = "2018"

description = "A library for interrupting asynchronous streams."
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

homepage = "https://github.com/jonhoo/stream-cancel"
repository = "https://github.com/jonhoo/stream-cancel.git"

keywords = ["asynchronous", "futures"]
categories = ["network-programming", "asynchronous"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/stream-cancel" }
maintenance = { status = "passively-maintained" }

[dependencies]
futures-core = "0.3.0"
futures-util = "0.3.0"
pin-project = "0.4.0"
tokio = { version = "0.2.0", features = ["sync", "io-util"] }

[dev-dependencies]
futures = "0.3.0"
tokio = { version = "0.2.0", features = ["full"] }
